# ACRIS

./: .gitignore  ACRIS_Arch_00.html  ACRIS_Arch_00.md  LICENSE  README.md  main.py  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: entry-point.instructions.md  vdb.instructions.md
Docs/: ACRIS System Development Plan.md  ACRIS_Arch_00.html  blueprint.md  classDiagram  enhancements02.md  packaging.prompt.txt  roadmap.md  vdb.md
Docs/Research/: ChatGPT_Background_LitReview.md  DeepSeek_Background_LitReview_2.md  DeepSeek_Sources_Keywords.md  Gemini_Construction Risk Identification Literature Review_.md  Gemini_LitReview_References_01.bib.txt
Docs/Research/notebook/Challenges-Future-Directions/: Lexicon-Development.md  Practical-Validation.md  Subjectivity-of-Relevance.md
Docs/Research/notebook/Recommender-Systems/: Machine-Learning-Algorithms.md  Risk-Case-Retrieval.md  User-Project-Data-Integration.md
Docs/modules/: data-process.md  query.md  recommending.md  retrieval.md  users.md
Research/: ChatGPT_LitReview_References.bib.txt
Research/notebook/: notebook_Prospective_2025.md
Research/notebook/Challenges-Future-Directions/: Threshold-Determination.md
Research/notebook/Recommender-Systems/: Case-Based-Reasoning.md  Hybrid-Ranking-Strategies.md  Query-Expansion.md  Risk-Case-Retrieval.md  User-Project-Data-Integration.md
acris/: README.md  __init__.py  main.py  vector_db.py
acris/common/: README.md  __init__.py
acris/dp/: README.md  __init__.py  api.py
acris/dp/cleaning/: __init__.py
acris/dp/config/: README.md  __init__.py
acris/dp/data/: __init__.py
acris/dp/data/processed/: README.md  __init__.py
acris/dp/data/raw/: README.md  __init__.py
acris/dp/ingestion/: __init__.py
acris/dp/processing/: README.md  __init__.py
acris/dp/tests/: README.md  __init__.py
acris/dp/utils/: README.md  __init__.py
acris/qo/: README.md  __init__.py
acris/ra/: README.md  __init__.py
acris/ro/: README.md  __init__.py  api.py
acris/upq/: README.md  __init__.py  api.py  test_upq_db.py
dp/: .env.example  README.md
dp/data/processed/: README.md
dp/data/raw/: README.md
dp/src/: main.py
dp/src/cleaning/: README.md
dp/src/ingestion/: README.md
dp/src/processing/: README.md
dp/src/utils/: README.md
dp/tests/: test_cleaning.py  test_ingestion.py  test_processing.py
