[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]

[project]
name = "acris"
version = "0.1.0"
description = "Automated Construction Risk Identification System"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Osama Ata", email = "me@osamata.com" }]
maintainers = [{ name = "Osama Ata", email = "me@osamata.com" }]
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
keywords = ["construction", "risk", "automation", "engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas >=1.4",
    "numpy>=1.21",
    "requests >=2.27",
    # Add more dependencies as needed
    "duckdb>=1.2.2",
    "sentence-transformers>=4.1.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["ruff"]

[project.urls]
homepage = "https://github.com/osama-ata/ACRIS"
repository = "https://github.com/osama-ata/ACRIS"
documentation = "https://github.com/osama-ata/ACRIS/wiki"

[project.scripts]
acris-cli = "acris.main:main"

[project.entry-points."acris.plugins"]
# Example plugin entry point
#sample_plugin = "acris.plugins.sample:SamplePlugin"

[tool.setuptools]
# If you use setuptools, you can add its config here
# Example: to include package data
packages = ["acris"]

[dependency-groups]
dev = ["ruff>=0.11.10"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
